force-app/main/default/objects/Department__c/fields/CAP_PAP_received__c.field-meta.xml
<CustomField>
    <fullName>CAP_PAP_received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CAP &amp; PAP received</label>
    <type>Checkbox</type>
</CustomField>