force-app/main/default/objects/Department__c/fields/Dep_Url__c.field-meta.xml
<CustomField>
    <fullName>Dep_Url__c</fullName>
    <formula>HYPERLINK(&quot;https://mckesson--pdenable.lightning.force.com/lightning/r/Knowledge__kav/ka02f00000037g3AAA/view&quot;, &quot;Department Home Page&quot;, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dep_Url</label>
    <type>Text</type>
</CustomField>