force-app/main/default/objects/Department__c/fields/Department_Location__c.field-meta.xml
<CustomField>
    <fullName>Department_Location__c</fullName>
    <label>Department_Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kadapa</fullName>
            </value>
            <value>
                <fullName>Nellore</fullName>
            </value>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Warangal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>