force-app/main/default/objects/Department__c/fields/Establish_Date__c.field-meta.xml
<CustomField>
    <fullName>Establish_Date__c</fullName>
    <label>Establish_Date</label>
    <type>Date</type>
</CustomField>