force-app/main/default/objects/Department__c/fields/Root_Cause_Analyses_Completed__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_Analyses_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Root Cause Analyses Completed</label>
    <type>Checkbox</type>
</CustomField>