force-app/main/default/objects/Department__c/recordTypes/SCAR.recordType-meta.xml
<RecordType>
    <fullName>SCAR</fullName>
    <active>true</active>
    <label>SCAR</label>
</RecordType>