force-app/main/default/objects/Department__c/recordTypes/test_Scar.recordType-meta.xml
<RecordType>
    <fullName>test_Scar</fullName>
    <active>true</active>
    <label>test Scar</label>
</RecordType>